12 August 2008
+ Removed cropped from install.sql and added vertical and num_visible
  columns.
+ Changed admin links to icons.
+ Key is now deleted with folder.
+ mod_rewrite format changed over.
+ Update: templates/folder_list.tpl, templates/style.css, img/add.png


1 August 2008
+ added metacafe as embed type
+ Changed 'video' to 'media' in wording
+ Thumbnails of embeds prefixed with embed type to prevent overlap
+ Flickr renamed User since group ids do not work.

15 July 2008
+ Added patch #1939151 by Eloi George. Removed redundant code.
+ Added patch #1939146 by Eloi George. Adds setPlaceholderMaxWidth and
  setPlaceholderMaxHeight functions.

2 July 2008
+ confirm message restored to pick_file script.
+ Updated: javascript/pick_file/head.js

23 June 2008
+ Removed cropped column from file_assoc; not needed, file_type covers
  it
+ Storing carousel settings in file_assoc
+ Carousel settings can be made on file manager post
+ Image crop association deletes added to image delete
+ Added reference to media embedd function to allow functioning with
  php 4
+ jCarousel is default view in File Manager
+ Updated: javascript/jcaro_lite/head.js, javascript/pick_file/
  javascript/update_file/head.js, templates/style.css,
  templates/file_manager/carousel_pick.tpl
  templates/settings.tpl

20 June 2008
+ Not making image title required
+ Made placeholder image clickable.
+ Fixed bug introduced with placeholder link.

19 June 2008
+ Removed unsigned integers from update.php
+ Media resizing is working properly again.
+ Added a setRequired to Image title.
+ Changed youtube import to work properly with XMLParser fixes.
+ Fixed bad tag in document list view
+ Updated: templates/file_list.tpl

13 June 2008
+ Replaced next and previous picture links with png arrows
+ Added a warning message if a folder is made private after a folder
  slideshow is created.
+ application/msword loads the document.png now instead of the
  text.png