@@ -5,10 +5,11 @@
 <hr />
 <table width="100%" cellpadding="2">
   <tr>
-    <th>{TITLE_SORT} {TITLE_LABEL}<br />
-        {FILE_NAME_SORT} {FILE_NAME_LABEL}</th>
-    <th>{FILE_TYPE_SORT} {FILE_TYPE_LABEL}</th>
+    <th>{TITLE_SORT}<br />
+        {FILE_NAME_SORT}</th>
+    <th>{FILE_TYPE_SORT}</th>
     <th>{SIZE_SORT} {SIZE_LABEL}</th>
+    <!-- BEGIN download --><th>{DOWNLOADED_SORT}</th><!-- END download -->
     <th>{ACTION_LABEL}</th>
   </tr>
 <!-- BEGIN listrows -->
@@ -17,6 +18,7 @@
     <i>{FILE_NAME}</i></td>
     <td class="fc-file-type">{ICON}<br />{FILE_TYPE}</td>
     <td class="fc-size">{SIZE}</td>
+    <!-- BEGIN download-col --><td>{DOWNLOADED}</td><!-- END download-col -->
     <td>{ACTION}</td>
   </tr>
 <!-- END listrows -->
